<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- home -->
    <string name="app_name">商铺租售网</string>
    <string name="btn_home">首页</string>
    <string name="btn_publish">免费发布</string>
    <string name="btn_shopcenter">购物中心</string>
    <string name="btn_street">步行街</string>
    <string name="btn_hotel">星级酒店</string>
    <string name="btn_community">社区商业</string>
    <string name="btn_search">搜索</string>
    <string name="text_search">输入商业体名称寻找商铺</string>
    
    <!-- publish -->
    <string name="btn_store_hire">我要出租商铺</string>
    <string name="btn_store_sell">我要出售商铺</string>
    <string name="btn_store_lessee">我要承租商铺</string>
    <string name="btn_store_buy">我要购买商铺</string>
    
    <!-- edit sell -->
    <string name="btn_back">返回</string>
    <string name="text_edit_sell_1">【项目概念图】</string>
    <string name="text_edit_sell_2">选择上传，上传格式为JPG、PNG、JPEG、BMP</string>
    <string name="text_edit_sell_3">【招商手册/宣传手册】</string>
    <string name="text_edit_sell_4">选择上传，上传格式为PPT、MP4、WMV</string>
    <string name="text_edit_sell_5">项目名称</string>
    <string name="text_edit_sell_6">定位</string>
    <string name="text_edit_sell_7">地址</string>
    <string name="text_edit_sell_8">联系人</string>
    <string name="text_edit_sell_9">联系方式</string>
    <string name="text_edit_sell_10">【铺位信息】</string>
    <string name="text_edit_sell_11">铺位 号</string>
    <string name="text_edit_sell_12">使用面积</string>
    <string name="text_edit_sell_13">租金/售价</string>
    <string name="text_edit_sell_14">工程条件</string>
    <string name="text_edit_sell_15">m²</string>
    <string name="text_edit_sell_16">元/m²</string>
    <string name="text_edit_sell_17">其他</string>
    <string name="btn_select">选择</string>
    <string name="btn_upload">上传</string>
    <string name="btn_type">类别</string>
    <string name="btn_add">添加</string>
    <string name="btn_delete">删除</string>
    <string name="btn_apply">提交</string>

    <!-- edit buy -->
    <string name="text_edit_buy_1">承租</string>
    <string name="text_edit_buy_2">购买</string>
    <string name="text_edit_buy_3">个人</string>
    <string name="text_edit_buy_4">加盟商</string>
    <string name="text_edit_buy_5">公司直营</string>
    <string name="text_edit_buy_6">品牌名称</string>
    <string name="text_edit_buy_7">使用面积</string>
    <string name="text_edit_buy_8">意向价格</string>
    <string name="text_edit_buy_9">工程需求</string>
    <string name="btn_select_purpose">意向类型</string>
    <string name="btn_select_manage">经营类型</string>
    
    <!-- store list -->
    <string name="text_store_list_5">项目名称：</string>
    <string name="text_store_list_6">地址：</string>
    <string name="text_store_list_7">价格：</string>
    <string name="text_store_list_8">使用面积：</string>
    <string name="text_store_list_9">招商对象：</string>
    <string name="text_store_list_10">【需求】</string>
    
    <!-- spinner list -->
    <string-array name="store_type">
        <item>购物中心</item>
        <item>步行街</item>
        <item>星级酒店</item>
        <item>社区商业</item>
    </string-array>
</resources>