<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_marginBottom="2dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/homeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
            		android:layout_marginLeft="3.0dip"
                    android:text="@string/btn_home" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/publishButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="3.0dip"
                    android:text="@string/btn_publish" />
            </LinearLayout>
        </LinearLayout>

        <com.buc.cre.widget.ImageCycleView
            android:id="@+id/ad_viewTop"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginBottom="2dp">
        </com.buc.cre.widget.ImageCycleView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" 
            android:layout_weight="1"
            android:layout_marginBottom="2dp">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >
                <Button
                    android:id="@+id/shopCenterButton"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
            		android:layout_weight="2"
                    android:text="@string/btn_shopcenter" />
                <ImageView
		            android:id="@+id/shopCenterImage"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:src="@drawable/ic_launcher" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/streetButton"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
            		android:layout_weight="2"
                    android:text="@string/btn_street" />
                <ImageView
		            android:id="@+id/streeImage"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:src="@drawable/ic_launcher" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/hotelButton"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
            		android:layout_weight="2"
                    android:text="@string/btn_hotel" />
                <ImageView
		            android:id="@+id/hotelImage"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:src="@drawable/ic_launcher" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/communityButton"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
            		android:layout_weight="2"
                    android:text="@string/btn_community" />
                <ImageView
		            android:id="@+id/communityImage"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:src="@drawable/ic_launcher" />
            </LinearLayout>
        </LinearLayout>
        
        <com.buc.cre.widget.ImageCycleView
            android:id="@+id/ad_viewButtom"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" 
            android:layout_weight="1">
        </com.buc.cre.widget.ImageCycleView>
        
    </LinearLayout>

</RelativeLayout>